infrastructure/openshift/route/fuseki-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: fuseki-route
spec:
  to:
    kind: Service
    name: fuseki
  port:
    targetPort: 3030
  tls:
    termination: edge
